--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /face.land"
+    "build": "parcel build src/index.html"
   },
   "dependencies": {
     "bulma": "^0.8.0"
