--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "private": true,
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
-    "sass": "^1.23.7"
+    "prettier": "^1.19.1",
+    "sass": "^1.23.7",
+    "typescript": "^3.7.2"
   },
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "dev": "parcel src/*.html",
+    "build": "parcel build src/*.html"
   },
   "dependencies": {
-    "bulma": "^0.8.0"
+    "bulma": "^0.8.0",
+    "minecraft-text-js": "^1.1.3"
   }
 }
