--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "cpy-cli": "^2.0.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "sass": "^1.23.7",
@@ -15,7 +16,7 @@
   },
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html"
+    "build": "parcel build src/*.html && cpy CNAME dist"
   },
   "dependencies": {
     "bulma": "^0.8.0",
