--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "parcel build src/*.html && cpy CNAME dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "bulma": "^0.8.0",
     "minecraft-text-js": "^1.1.3"
   }
