--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -30,4 +30,4 @@ jobs:
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           PUBLISH_BRANCH: master
-          PUBLISH_DIR: ./dist
+          PUBLISH_DIR: ./build
