--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_DOMAIN="faceland-rpg.us.auth0.com"
 REACT_APP_AUTH0_CLIENT_ID="IZKw6O0o7VR5Ns0rn1XA5UkVW0gZTmgE"
+DISABLE_ESLINT_PLUGIN=true
