--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.2.1",
     "react-spring": "^8.0.27",
     "react-ticker": "^1.2.2",
     "styled-components": "^5.2.1",
