First crack at FacePals

--- a/package.json
+++ b/package.json
@@ -7,22 +7,27 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "array-move": "^4.0.0",
     "lodash": "^4.17.21",
     "mctext-react": "^1.1.0",
     "node-sass": "^5.0.0",
-    "react": "^17.0.1",
+    "react": "^18.0.0",
     "react-accessible-accordion": "^3.3.4",
+    "react-color": "^2.19.3",
     "react-debounce-input": "^3.2.5",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.0.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-icon-tint": "^2.4.2",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-scrollbars-custom": "^4.1.1",
     "react-select": "^5.2.1",
     "react-spring": "^8.0.27",
     "react-ticker": "^1.2.2",
-    "styled-components": "^5.2.1",
+    "reactcss": "^1.2.3",
     "use-sound": "^2.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
