--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "array-move": "^4.0.0",
     "lodash": "^4.17.21",
     "mctext-react": "^1.1.0",
-    "p5": "^1.5.0",
     "node-sass": "^6.0.0",
+    "p5": "^1.5.0",
     "react": "^18.0.0",
     "react-accessible-accordion": "^3.3.4",
+    "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-debounce-input": "^3.2.5",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.0",
     "react-flexbox-grid": "^2.1.2",
     "react-icon-tint": "^2.4.2",
