--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-spring": "^8.0.27",
     "react-ticker": "^1.2.2",
     "reactcss": "^1.2.3",
+    "use-deep-compare-effect": "^1.8.1",
     "use-sound": "^2.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^1.0.1"
