--- a/package.json
+++ b/package.json
@@ -4,37 +4,37 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "array-move": "^4.0.0",
     "lodash": "^4.17.21",
     "mctext-react": "^1.1.0",
-    "node-sass": "^6.0.0",
     "p5": "^1.5.0",
     "react": "^18.0.0",
     "react-accessible-accordion": "^3.3.4",
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-custom-scrollbars": "^4.2.1",
-    "react-debounce-input": "^3.2.5",
+    "react-debounce-input": "^3.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.0",
     "react-flexbox-grid": "^2.1.2",
     "react-icon-tint": "^2.4.2",
-    "react-modal": "^3.12.1",
-    "react-router": "^6.4.5",
-    "react-router-dom": "^6.4.5",
+    "react-modal": "^3.16.1",
+    "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.2.1",
-    "react-spring": "^8.0.27",
-    "react-ticker": "^1.2.2",
+    "react-select": "^5.7.0",
+    "react-spring": "^9.6.1",
+    "react-ticker": "^1.3.2",
     "reactcss": "^1.2.3",
+    "sass": "^1.57.1",
     "use-deep-compare-effect": "^1.8.1",
-    "use-sound": "^2.0.1",
+    "use-sound": "^4.0.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "node_modules/.bin/react-scripts start",
