--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.2",
     "react-flexbox-grid": "^2.1.2",
     "react-icon-tint": "^2.5.1",
     "react-modal": "^3.16.1",
@@ -28,7 +29,6 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-spring": "^9.7.3",
-    "react-ticker": "^1.3.2",
     "reactcss": "^1.2.3",
     "sass": "^1.69.5",
     "use-deep-compare-effect": "^1.8.1",
