--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@material-tailwind/react": "^2.1.5",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
@@ -13,7 +14,6 @@
     "p5": "^1.9.0",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-debounce-input": "^3.3.0",
