--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,17 @@
 {
-  "short_name": "Faceland RPG",
-  "name": "FACE DOT LAND",
+  "short_name": "Faceland",
+  "name": "Faceland RPG - Minecraft MMORPG",
+  "description": "A free-to-play Minecraft MMORPG server featuring epic quests, versatile classes, unique loot, dungeons, raids, guild PvP, and arenas! No mods required!",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
       "src": "android-chrome-192x192.png",
@@ -18,8 +24,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#1a1410",
+  "background_color": "#0d0a08"
 }
