--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@material-tailwind/react": "^2.1.5",
+    "@tanstack/react-virtual": "^3.13.18",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
